--- a/css/styles.css
+++ b/css/styles.css
@@ -442,12 +442,14 @@ header {
     padding-bottom: 64px;
     padding-left: 16px;
     max-width:100%;
+    width:95%;
 }
 
 .mid_guest_text{
     padding-bottom: 32px;
     padding-left: 16px;
     max-width:100%;
+    width:95%;
 }
 
 .mid img, .mid img, .mid img {
